tests/integration/per_document_grammar/validation/_views/03_default_view_doesnt_exist/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Default view 'BOGUS_VIEW' does not exist in the document.
CHECK: Location: {{.*}}input.sdoc:6:1
CHECK: Hint: Make sure the default view is created in the views.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
